--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
+    "rxjs": "^6.5.5",
     "typescript": "^3.9.2"
   },
   "scripts": {
